fixed the footer alignment in mobile devices

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -75,6 +75,7 @@ nav{
     }
   }
   @media (max-width: 920px) {
+
     nav .menu-btn i{
       display: block;
     }
@@ -178,6 +179,12 @@ button:active{
     justify-content: center;
 }
 @media (max-width:920px) {
+  body{
+    display: block;
+  }
+  .Index{
+      position: absolute;
+  }
   #divcalculator{
     height: 400px;
     width: 100%;
